# enzoe-price-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml
docs/: ARD-entsoe-price-fetcher.md  PRD-entsoe-price-fetcher.md  RFC-entsoe-price-fetcher.md
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.yaml.template  service.yaml
migrations/: 20241231000000_initial_schema.sql
src/: lib.rs  main.rs
src/api/: dto.rs  error.rs  handlers.rs  middleware.rs  mod.rs  routes.rs
src/config/: mod.rs
src/entsoe/: client.rs  error.rs  mod.rs  validation.rs  xml.rs
src/fetcher/: mod.rs  service.rs
src/metrics/: mod.rs
src/models/: bidding_zone.rs  fetch_log.rs  mod.rs  price.rs
src/scheduler/: mod.rs
src/storage/: error.rs  mod.rs  repository.rs
