[package]
name = "entsoe-price-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid", "migrate", "rust_decimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
tokio-cron-scheduler = "0.14"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
rust_decimal = { version = "1.36", features = ["serde"] }
iso8601-duration = "0.2"
futures = "0.3"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
uuid = { version = "1.11", features = ["v4", "serde"] }
